--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -17,7 +17,8 @@ jobs:
       id-token: write       # to enable use of OIDC for npm provenance
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version:
+          - 18.x
 
     steps:
       - name: Checkout
