--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,39 +1,31 @@
 name: Release workflow
 
 on:
-  push:
-    branches:
-      - ci
-permissions:
-  contents: read # for checkout
+  # push:
+  #   branches:
+  #     - main
+  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  release:
     permissions:
       contents: write       # to be able to publish a GitHub release
       issues: write         # to be able to comment on released issues
       pull-requests: write  # to be able to comment on released pull requests
       id-token: write       # to enable use of OIDC for npm provenance
-    strategy:
-      matrix:
-        node-version:
-          - 18.x
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node 18
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
           cache: "npm"
-      - run: npm install
-        env:
-          HUSKY: 0
+      - run: npm ci
+      - run: npm run build
       - run: npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        name: Release
